# webservices-bench-client-cpp

./: CMakeLists.txt  README.md  WebServicesBenchClientCPP.cmake.in
conf/: anch-logger.conf  application.conf  dataset  dataset.json
inc/: clientTestSuite.hpp  dataset.hpp  thriftClientTestSuite.hpp
src/: application.cpp  dataset.cpp  thriftClientTestSuite.cpp
test/: testCustomerCall.cpp
